gcc/testsuite/rust/rustc/ui/issues/issue-7813.rs
fn main() {
    let v = &[]; // { dg-error ".E0282." "" { target *-*-* } }
    let it = v.iter();
}

